@@ -1,5 +1,11 @@
 2009-07-22  Priit Laes  <plaes@plaes.org>
 
+	Bug 573172 – [PATCH] Get rid of deprecated APIs
+
+	* src/PlaylistWindow.cs, src/VolumeButton.cs: Port to newer GtkTooltip API.
+
+2009-07-22  Priit Laes  <plaes@plaes.org>
+
 	* configure.in: Change gtk-sharp version from 2.19.2 to 2.12.9 :(
 
 2009-07-22  Iain Lane <laney@ubuntu.com>
